--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>London-trip</title>
 </head>
 <body>
-    
+    <!-- header with title and img -->
+    <header>
+        <h1>Il mio viaggio a Londra</h1>
+        <img src="img/pexels-bill-emrich-230794-0.jpg">
+        <img src="img/pexels-bill-emrich-230794-1.jpg">
+        <img src="img/pexels-bill-emrich-230794-2.jpg"> <hr>
+    </header>
+    <!-- /header with title and img -->
 </body>
 </html>
