--- a/index.html
+++ b/index.html
@@ -15,5 +15,42 @@
         <img src="img/pexels-bill-emrich-230794-2.jpg"> <hr>
     </header>
     <!-- /header with title and img -->
+
+    <!-- notes on the trip -->
+    <section>
+        <!-- tabella spese -->
+        <div>
+            <h2>Le mie spese</h2>
+            <table>
+                <tr>
+                    <td><b>Numero</b></td>
+                    <td><b>Descrizione</b></td>
+                    <td><b>Costo</b></td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto aereo</td>
+                    <td>120€</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto aereo</td>
+                    <td>120€</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto aereo</td>
+                    <td>120€</td>
+                </tr>
+                <tr>
+                    <td colspan="2">Totale</td>
+                    <td>360€</td>
+                </tr>
+            </table>
+        </div>
+         <!-- /tabella spese -->
+    </section>
+    <!-- /notes on the trip -->
+
 </body>
 </html>
