--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 
     <!-- notes on the trip -->
     <section>
-        <!-- tabella spese -->
-        <div>
+        <div> <!-- tabella spese -->
             <h2>Le mie spese</h2>
             <table>
                 <tr>
@@ -46,9 +45,18 @@
                     <td colspan="2">Totale</td>
                     <td>360€</td>
                 </tr>
-            </table>
-        </div>
-         <!-- /tabella spese -->
+            </table> <hr>
+        </div><!-- /tabella spese -->
+    
+        <div> <!-- to do list -->
+            <h2>Cose da fare</h2>
+            <ul>
+                <li>Visitare la Tower of London ✗</li>
+                <li>Visitare Greenwich ✔</li>
+                <li>Ascoltare  un artista di strada a Covent Garden ✔</li>
+                <li>Mangiare il tipico Fish and Chips inglese ✗</li>
+            </ul> <hr>
+        </div> <!-- /to do list -->
     </section>
     <!-- /notes on the trip -->
 
