Added useful info section

--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
                     <td colspan="2">Totale</td>
                     <td>360€</td>
                 </tr>
-            </table> <hr>
+            </table> 
         </div><!-- /tabella spese -->
+        <hr>
     
         <div> <!-- to do list -->
             <h2>Cose da fare</h2>
@@ -55,8 +56,36 @@
                 <li>Visitare Greenwich ✔</li>
                 <li>Ascoltare  un artista di strada a Covent Garden ✔</li>
                 <li>Mangiare il tipico Fish and Chips inglese ✗</li>
-            </ul> <hr>
+            </ul>
         </div> <!-- /to do list -->
+        <hr>
+
+        <div> <!-- useful info  -->
+            <h2>Info utili:</h2>
+                <ol>
+                    <li> <span>Numeri utili di emergenza</span>
+                        <ul>
+                            <li><b>999</b> - Emergenza</li>
+                            <li><b>101</b> - Numero Polizia</li>
+                            <li><b>111</b> - Numero assistenza merdica</li>
+                        </ul>
+                    </li>
+                    <li> <span>Hotel</span>
+                        <ul>
+                            <li><b>Nome hotel:</b> Buckingham Palace</li>
+                            <li><b>Indirizzo hotel:</b> Westminster, London SW1AA, Regno Unito</li>
+                        </ul>
+                    </li>
+                    <li> <span>Aereo</span>
+                        <ul>
+                            <li><b>Volo di andata:</b> YI234X, ore 9.30 da Milano Malpensa</li>
+                            <li><b>Volo di ritorno:</b> YI236X, ore 18.30 da London Heathrow</li>
+                        </ul>
+                    </li>
+                </ol>
+        </div> <!-- /useful info  -->
+        <hr>
+
     </section>
     <!-- /notes on the trip -->
 
