--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@
         </div> <!-- /useful info  -->
         <hr>
 
+        <div> <!-- Photos  -->
+            <h2>Le foto</h2>
+            <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQhckqiWnw8b6knphxS9zcIIAKzqQgKQirQoHO7OyOq9Du-8MCl">
+        </div> <!-- /Photos  -->
     </section>
     <!-- /notes on the trip -->
 
